Setup GitHub CI action to run tests (#15)